Fix selection tabs, chart donut, skeletons, and loading placeholders. 	Add cue region and remove padding in packages/shared/src/utils/tabs.scss to make the selection tabs fit the content. and add max-width in packages/ocs/dashboards/common/capacity-card/capacity-card.scss to make the chardonut remain in the raw capacity card during zoom in and zoom out. Fix the loading placeholders overlapped with the text in /packages/ocs/dashboards/object-service/status-card/object-service-health.tsx file. Add loading skeletons to details cards in files /packages/ocs/dashboards/object-service/details-card/details-card.scss /packages/ocs/dashboards/object-service/details-card/details-card.tsx and /packages/ocs/dashboards/persistent-internal/details-card.tsx.

--- a/packages/ocs/dashboards/common/capacity-card/capacity-card.scss
+++ b/packages/ocs/dashboards/common/capacity-card/capacity-card.scss
@@ -13,6 +13,7 @@
   &__chart {
     flex-grow: 0.12;
     max-height: 180px;
+    max-width: 180px;
     margin-bottom: 1rem;
     margin-right: 1rem;
   }
